[gd_scene load_steps=2 format=3 uid="uid://b37hth77ew4nl"]

[ext_resource type="Script" uid="uid://b7vwij0t5iiml" path="res://components/CustomerDevtools.gd" id="1_vt3mx"]

[node name="CustomerDevtools" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vt3mx")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Devtools"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 29.0
offset_right = 276.0
offset_bottom = 69.0

[node name="EncounterSelector" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2

[node name="StageSelector" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Stage 1"
popup/item_0/id = 0
popup/item_1/text = "Stage 2"
popup/item_1/id = 1
popup/item_2/text = "Stage 3"
popup/item_2/id = 2

[node name="RenderEncounter" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Render Encounter Step
"

[node name="StartEncounter" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Play Random Encounter"

[node name="SimulateServingMix" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Simulate Serving Mix"

[node name="StartShopTurn" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Start Shop Turn"
